libcm4all-http (1.1) unstable; urgency=low

  * method: add missing HTTP methods OPTIONS, TRACE

 --   

libcm4all-http (1.0) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Mon, 08 Nov 2010 22:14:20 +0100