@@ -17,6 +17,16 @@ typedef enum {
     HTTP_METHOD_DELETE,
     HTTP_METHOD_OPTIONS,
     HTTP_METHOD_TRACE,
+
+    /* WebDAV methods */
+    HTTP_METHOD_PROPFIND,
+    HTTP_METHOD_PROPPATCH,
+    HTTP_METHOD_MKCOL,
+    HTTP_METHOD_COPY,
+    HTTP_METHOD_MOVE,
+    HTTP_METHOD_LOCK,
+    HTTP_METHOD_UNLOCK,
+
     HTTP_METHOD_INVALID,
 } http_method_t;
 
