@@ -1,6 +1,7 @@
 libcm4all-http (1.1) unstable; urgency=low
 
   * method: add missing HTTP methods OPTIONS, TRACE
+  * method: add WebDAV methods
 
  --   
 
